# SoundCloud-Desktop-KR

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose-dev.yml  update_info.json
.github/flatpak/: io.github.zxcloli666.SoundcloudDesktop.yml
.github/workflows/: auto-build.yml  cache-cleanup.yml  ci.yml  code-review.yml
_refs/: .gitignore
admin/: .firebaserc  Dockerfile  index.html  package.json  pnpm-lock.yaml
admin/src/: App.tsx  index.css
admin/src/components/: ConfirmDialog.tsx  DataTable.tsx  GlassCard.tsx  Layout.tsx  Modal.tsx
admin/src/lib/: api.ts  auth.ts
admin/src/pages/: Dashboard.tsx  Featured.tsx  Login.tsx  OAuthApps.tsx  Subscriptions.tsx
backend/: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  docker-compose-prod.yml  docker-compose.yml  drizzle.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
backend/cert-runner/: Cargo.toml
backend/cert-runner/src/: issuer.rs  main.rs
backend/drizzle/meta/: 0000_snapshot.json  _journal.json
backend/gateway/: Cargo.toml
backend/gateway/src/: config.rs  health.rs  lb.rs  main.rs  proxy.rs  status.rs  supervisor.rs  tls.rs
backend/gateway/src/acme/: issuer.rs  mod.rs
backend/src/: app.module.ts  main.ts
backend/src/admin/: admin-stats.controller.ts
backend/src/auth/: auth.constants.ts  auth.controller.ts  auth.module.ts  auth.service.ts  callback-page.ts  link.controller.ts  link.service.ts
backend/src/bus/: nats.module.ts  nats.service.ts  subjects.ts
backend/src/cache/: cache-clear.decorator.ts  cache.interceptor.spec.ts  cache.interceptor.ts  cache.module.ts  cache.service.ts  cached.decorator.ts  list-cache.service.ts
backend/src/cdn/: cdn.module.ts  cdn.service.ts
backend/src/centroids/: centroid.service.ts  centroids.module.ts
backend/src/collab/: collab-admin.controller.ts  collab-trainer.service.ts  collab-vector.service.ts  collab.module.ts
backend/src/common/: sc-ids.ts  user-id.ts  uuid.ts
backend/src/config/: configuration.ts
backend/src/db/: db.constants.ts  db.module.ts  schema.ts
backend/src/dislikes/: dislikes.controller.ts  dislikes.module.ts  dislikes.service.ts
backend/src/events/: events.controller.ts  events.module.ts  events.service.ts  indexing-queue.consumer.ts
backend/src/featured/: featured-admin.controller.ts  featured.controller.ts  featured.module.ts  featured.service.ts
backend/src/history/: history.controller.ts  history.module.ts  history.service.ts
backend/src/indexing/: indexing.controller.ts  indexing.module.ts  indexing.service.ts  track-discovery.service.ts
backend/src/likes/: likes.controller.ts
backend/src/local-likes/: local-likes.module.ts  local-likes.service.ts
backend/src/ltr/: ltr-admin.controller.ts  ltr-trainer.service.ts  ltr.module.ts  ltr.service.ts
backend/src/lyrics/: genius.service.ts  lrclib.service.ts  lyrics.controller.ts  lyrics.module.ts  lyrics.service.ts  lyrics.util.ts  musixmatch.service.ts  netease.service.ts  worker.client.ts
backend/src/me/: me.controller.ts  me.module.ts  me.service.ts
backend/src/oauth-apps/: oauth-apps.controller.ts  oauth-apps.module.ts  oauth-apps.service.ts
backend/src/pending-actions/: pending-actions.module.ts  pending-actions.service.ts
backend/src/playlists/: playlists.controller.ts  (+1 more)
desktop/: AGENTS.md  package.json  pnpm-lock.yaml
desktop/src/: App.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
docs/: agent-edit-tool.md  agent-tools.md  icon-prompts.md  qr-link-protocol.md  rust-refactor-audit.md  rust-refactor-brief.md
landing/: index.html  package.json  pnpm-lock.yaml
landing/src/: App.tsx  index.css  main.tsx
storage/: .env.example  AGENTS.md  Cargo.toml  Dockerfile  docker-compose.yml
storage/src/: bus.rs  config.rs  main.rs  pipeline.rs  transcode.rs
storage/src/backend/: local.rs  mod.rs  s3.rs
storage/src/routes/: files.rs  upload.rs
streaming/: Cargo.toml  Dockerfile
streaming/src/: config.rs  error.rs  main.rs
tls-common/: Cargo.toml
tls-common/src/: lib.rs
worker/: .env.example  AGENTS.md  Dockerfile  Dockerfile.gpu  docker-compose.yml  requirements.txt
worker/src/: config.py  main.py  subjects.py
(+214 files in other folders)
