[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tokio-util = { version = "0.7", features = ["io"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
opt-level = "s"
