[package]
name = "cert-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "net", "process", "signal", "sync", "time", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
instant-acme = "0.7"
rcgen = "0.13"
axum = "0.8"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
serde_json = "1"
sha2 = "0.10"
x509-parser = "0.16"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
opt-level = "s"
